# payment-instruction-parser

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: payments.py
app/core/: config.py
app/db/: init.py  models.py  session.py
app/models/: payment.py
app/services/: email_loader.py  extractor.py
demo/: demo.cjs
docs/: case-study.md  deployment.md  neon.md  pm_report.md  supabase.md  tradeoffs.md  vercel.md
pages/: index.tsx
streamlit_app/: Home.py
styles/: globals.css
tests/: test_email_loader.py  test_schema.py
tests/fixtures/emails/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.eml
