[project]
name = "payment-instruction-parser"
version = "0.1.0"
description = "Internal finance tool for extracting structured payment instructions from messy emails."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "openai>=1.93.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
streamlit = [
    "streamlit>=1.37.0",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
